Issue #SB-28528 fix: Portal: Congratulationsgit merge upstream/release-4.7.0  You have successfully completed the course pop-up is distorted

--- a/src/app/client/src/assets/styles/pages/_mat-modal.scss
+++ b/src/app/client/src/assets/styles/pages/_mat-modal.scss
@@ -59,14 +59,33 @@
     overflow: auto;
     width: 100%;
     height: 100%;
+
+    .mat-dialog-container {
+      padding: 0;
+      border-radius: 4px;
+      overflow: hidden;
+      background-color: transparent;
+      box-shadow: none;
+      position: relative;
+
+      .mat-dialog-content {
+        margin: 0;
+        padding: 0;
+        max-height: 100%;
+        overflow: auto;
+      }
+    }
+
     &.overflow-visible {
       max-width: 100% !important;
+
       .mat-dialog-container {
         overflow: inherit;
         .mat-dialog-content {
           overflow: inherit;
         }
       }
+
       .sb-mat__modal__content {
         overflow-y: visible;
         max-height: inherit;
@@ -85,44 +104,6 @@
       &--fullscreen {
         max-width: 100%;
         margin: 0 auto;
-      }
-    }
-  }
-
-  .cdk-overlay-pane .mat-dialog-container {
-    padding: 0;
-    border-radius: 4px;
-    overflow: hidden;
-    background-color: transparent;
-    box-shadow: none;
-    position: relative;
-
-    .mat-dialog-content {
-      margin: 0;
-      padding: 0;
-      max-height: 100%;
-      overflow: auto;
-    }
-  }
-
-  .sb-mat {
-    &__modal {
-      .mat-dialog-title {
-        background: var(--mat-modal-title-bg);
-        color: var(--mat-modal-title-txt);
-        display: flex;
-        align-items: center;
-        padding: 4px 16px;
-        margin: 0;
-        min-height: 40px;
-        border-top-left-radius: 4px;
-        border-top-right-radius: 4px;
-
-        .title {
-          font-size: 16px;
-          font-weight: 700;
-          flex: 1;
-        }
       }
 
       &__content {
@@ -146,6 +127,24 @@
 
         html[layout='joy'] & {
           border: none;
+        }
+      }
+
+      .mat-dialog-title {
+        background: var(--mat-modal-title-bg);
+        color: var(--mat-modal-title-txt);
+        display: flex;
+        align-items: center;
+        padding: 4px 16px;
+        margin: 0;
+        min-height: 40px;
+        border-top-left-radius: 4px;
+        border-top-right-radius: 4px;
+
+        .title {
+          font-size: 16px;
+          font-weight: 700;
+          flex: 1;
         }
       }
 
@@ -185,6 +184,20 @@
     .sb-notification-list-items {
       max-height: 100%;
       overflow-y: inherit;
+    }
+  }
+
+  // Course Complete Badge Popup
+
+  .sb-mat__modal.sb-mat__modal--course-complete {
+    .sb-mat__modal__content {
+      position: relative;
+      border-radius: 24px;
+    }
+    .close-btn {
+      position: absolute;
+      right: 8px;
+      top: 8px;
     }
   }
 }
